--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-snippets",
+  "name": "react-native-dev-snippets",
   "displayName": "React Native Snippets",
   "description": "Modern React Native Snippets for faster development",
   "version": "0.0.1",
