--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-dev-snippets",
   "displayName": "React Native Snippets",
   "description": "Modern React Native Snippets for faster development",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Menelaia",
   "license": "MIT",
   "repository": {
@@ -14,7 +14,7 @@
   },
   "icon": "images/logo.png",
   "galleryBanner": {
-    "color": "#9774E2",
+    "color": "#4b3c6b",
     "theme": "dark"
   },
   "publisher": "Menelaia",
